newclay/test/Compiler/StaticEvaluator/Fail/NonexistentImportedSymbol/main.clay
import factorial.(Factorial, Gamma);

#Main() = Gamma(3);
